# cuda-testing

./: .gitmodules  CMakeLists.txt  README.md  result.txt  test
.cache/clangd/index/: cudaWrapper.cpp.4759489D56C47A74.idx  cudaWrapper.cpp.65CCF5B9ADAD6218.idx  cudaWrapper.hpp.74A90304702154A8.idx  cudaWrapper.hpp.E4396D528ADC4FE3.idx  main.cpp.44F090442D480084.idx  main.cpp.54E14D476E4F8755.idx  main.cpp.FFE867DE928DA44B.idx
.github/workflows/: codeql.yml  flawfinder.yml  msvc.yml
test1/src/: cudaWrapper.cpp  cudaWrapper.hpp  main.cpp
test2/: example.cu
test2/src/: cuda_vars.cu  cuda_vars.cuh  main.cpp  main.cu  rnn.cpp  rnn.hpp
test3/: failures.csv
test3/src/: main.cpp  rnn.cpp  rnn.hpp
test3/src/structs/: measurement.hpp  target.hpp
